k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websnap
  namespace: websnap
  labels:
    app.kubernetes.io/name: websnap
    app.kubernetes.io/component: extraction-service
    app.kubernetes.io/managed-by: kubectl
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: websnap
    app.kubernetes.io/component: extraction-service-light
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
